--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -3,3 +3,9 @@
   src: url('../fonts/Beleren.woff') format('woff');
   font-weight: normal;
 }
+
+@font-face {
+  font-family: 'Droid Sans Mono';
+  src: url('../fonts/DroidSansMono-webfont.woff.woff') format('woff');
+  font-weight: normal;
+}
