--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -6,6 +6,6 @@
 
 @font-face {
   font-family: 'Droid Sans Mono';
-  src: url('../fonts/DroidSansMono-webfont.woff.woff') format('woff');
+  src: url('../fonts/DroidSansMono-webfont.woff') format('woff');
   font-weight: normal;
 }
